crates/plotnik-tests/tests/04-emit/bytecode/binding/field_on_node_without_fields.txt
Q = (identifier
  name: (identifier) @inner
) @id
------------------ DIAGNOSTICS -------------------
error: `name` is not a grammar field of `identifier`
 --> query.ptk:2:3
  |
1 | Q = (identifier
  |      ---------- `identifier` starts here
2 |   name: (identifier) @inner
  |   ^^^^
  |
help: `identifier` has no grammar fields
